--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@fluentui/react-components": "^9.54.0",
+    "pretty-ms": "^9.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -50,7 +51,7 @@
     "office-addin-lint": "^3.0.3",
     "office-addin-manifest": "^2.0.3",
     "office-addin-mock": "^3.0.3",
-    "office-addin-prettier-config": "^2.0.1",    
+    "office-addin-prettier-config": "^2.0.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vite-plugin-eslint": "^1.8.1",
